--- a/jprzimba/style.css
+++ b/jprzimba/style.css
@@ -1,8 +1,16 @@
 /*
 Theme Name: jprzimba
-Theme URI: Coloque aqui o URL do seu site
-Author: Seu nome
-Author URI: Coloque aqui o URL do seu site pessoal
-Description: Descrição do seu tema
+Theme URI: https://jprdesign.vercel.app/
+Author: João Paulo Ricardo
+Author URI: https://github.com/jprzimba
+Description: JPRZIMBA theme recreated using WordPress
 Version: 1.0
 */
+
+.font-teko {
+  font-family: "Teko", sans-serif;
+}
+
+.font-poppins {
+  font-family: "Poppins", sans-serif;
+}
